# LaCrew

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
config/: config_manager.py  settings.yaml
data/: .gitkeep  __init__.py  handler.py  models.py
interfaces/: __init__.py  data_handler.py  llm_provider.py  parser.py  search_engine.py
notebooks/: .gitkeep
scripts/: cli_tool.py  run_tests.bat
src/intelliscrape_studio/: app.py
src/intelliscrape_studio/common/: exceptions.py  utils.py
src/intelliscrape_studio/core/: config_loader.py  logging_setup.py  orchestrator.py
src/intelliscrape_studio/data/: handler.py  models.py
src/intelliscrape_studio/llm/: core.py  prompts.py
src/intelliscrape_studio/llm/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
src/intelliscrape_studio/scraping/: browser.py  crawler.py  search.py
src/intelliscrape_studio/scraping/parsers/: __init__.py  base.py  factory.py  html_parser.py  json_parser.py  utils.py  xml_parser.py
tests/: test_app.py  test_duckduckgo.py  test_llm_providers.py  test_search_engines.py
